<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_recorder</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jakub.marciniak2000@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <build_depend>libdraco-dev</build_depend>
  <build_depend>pluginlib</build_depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>libdraco-dev</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <depend>point_cloud_interfaces</depend>
  <depend>point_cloud_transport</depend>
  <depend>point_cloud_transport_plugins</depend>
  <depend>draco_point_cloud_transport</depend>
  <depend>rclcpp</depend>
  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
